--- a/package.json
+++ b/package.json
@@ -2,6 +2,12 @@
   "name": "vue-covid-tracker",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://github.com/Gagandeep39/vue-covid-tracker",
+  "author": {
+    "name": "Gagandeep Singh",
+    "email": "singh.gagandeep3911@gmail.com",
+    "url": "https://github.com/Gagandeep39"
+  },
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
