--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "vue-covid-tracker",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/Gagandeep39/vue-covid-tracker",
   "author": {
     "name": "Gagandeep Singh",
     "email": "singh.gagandeep3911@gmail.com",
@@ -14,8 +13,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@tailwindcss/postcss7-compat": "^2.0.2",
+    "autoprefixer": "^9",
     "core-js": "^3.6.5",
-    "vue": "^3.0.0"
+    "postcss": "^7",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
+    "vue": "^3.0.0",
+    "vue-router": "^3.5.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -24,7 +28,8 @@
     "@vue/compiler-sfc": "^3.0.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^7.0.0"
+    "eslint-plugin-vue": "^7.0.0",
+    "vue-cli-plugin-tailwind": "~2.0.6"
   },
   "eslintConfig": {
     "root": true,
@@ -44,5 +49,6 @@
     "> 1%",
     "last 2 versions",
     "not dead"
-  ]
+  ],
+  "homepage": "https://github.com/Gagandeep39/vue-covid-tracker"
 }
